# device-command-gateway

./: .env.example  .flake8  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  tox.ini  update_readme.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ---report-a-bug-.md  ---request-a-feature.md  1-bug-report.yml  2-feature-request.yml
.github/workflows/: create_release.yml  pull_request_test.yml
config/emqx/: acl.conf
config/postgres/: init.sql
src/: main.py
src/core/: __init__.py  configs.py  decorators.py
src/services/database/: __init__.py  crud.py  models.py
src/services/mqtt/: __init__.py  consumer.py  publisher.py
src/services/telnet/: cmd_handler.py
src/services/threading/: thread.py
src/tests/: test_1.py
src/tools/: parser.py
