[tool.poetry]
name = "device-command-gateway"
version = "1.0.0"
description = ""
authors = [""]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic-settings = "^2.14.1"
aiomqtt = "^2.5.1"


[tool.poetry.group.dev.dependencies]
tox = "^4.46.0"
black = "^26.1.0"
isort = "^8.0.0"
flake8 = "^7.3.0"
mypy = "^1.19.1"
semgrep = "^1.152.0"

[settings]
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py311']

[tool.coverage.run]
omit = ["src/tests/*"]

[tool.mypy]
ignore_missing_imports = true